--- a/public/index.html
+++ b/public/index.html
@@ -32,49 +32,7 @@
   <script>
     document.getElementById('scrape-button').addEventListener('click', async () => {
       try {
-        const response = await fetch('http://localhost:3000/scrape'); // Update with your server URL if deployed
-        const result = await response.json();
-        const schedule = result.schedule;
-        const personalInfo = result.personalInfo;
-        
-        // Display the scraped schedule data
-        const tbody = document.getElementById('scraped-data').querySelector('tbody');
-        tbody.innerHTML = ''; // Clear any existing rows
-
-        schedule.forEach(row => {
-          const tr = document.createElement('tr');
-          row.forEach(cell => {
-            const td = document.createElement('td');
-            td.textContent = cell;
-            tr.appendChild(td);
-          });
-          tbody.appendChild(tr);
-        });
-
-        // Display the personal information
-        document.getElementById('gender').textContent = personalInfo.gender || 'N/A';
-        document.getElementById('birthDate').textContent = personalInfo.birthDate || 'N/A';
-
-      } catch (error) {
-        console.error('Error fetching scraped data:', error);
-      }
-    });
-  </script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scraped Data</title>
-</head>
-<body>
-
-  <script>
-    document.getElementById('scrape-button').addEventListener('click', async () => {
-      try {
-        const response = await fetch('http://localhost:3000/scrape'); // Update with your server URL if deployed
+        const response = await fetch('/api/scrape'); // Adjusted for Vercel deployment
         const result = await response.json();
         const schedule = result.schedule;
         const personalInfo = result.personalInfo;
